// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`failing createOne FieldMetadataService morph relation fields v2 s should fail to create a MORPH_RELATION that has several references to same object 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "FIELD_METADATA_RELATION_MALFORMED",
              "message": "Morph relation creation payloads must have only relation to the same object metadata",
              "userFriendlyMessage": "Morph relation creation payloads must only contain relation to the same object metadata",
            },
          ],
          "operation": "create_field",
        },
      ],
      "objectMetadata": [],
    },
    "message": "Validation failed for 0 object(s) and 1 field(s)",
    "summary": {
      "invalidFields": 1,
      "invalidObjects": 0,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 1 field(s)",
  },
  "message": "Multiple validation errors occurred while creating field",
  "name": "GraphQLError",
}
`;

exports[`failing createOne FieldMetadataService morph relation fields v2 s should fail to create a MORPH_RELATION with many relation types 1`] = `
{
  "extensions": {
    "code": "BAD_USER_INPUT",
    "errors": {
      "fieldMetadata": [
        {
          "errors": [
            {
              "code": "FIELD_METADATA_RELATION_MALFORMED",
              "message": "Morph relation creation payloads must have the same relation type",
              "userFriendlyMessage": "Morph relation creation payloads must have the same relation type",
            },
          ],
          "operation": "create_field",
        },
      ],
      "objectMetadata": [],
    },
    "message": "Validation failed for 0 object(s) and 1 field(s)",
    "summary": {
      "invalidFields": 1,
      "invalidObjects": 0,
      "totalErrors": 1,
    },
    "userFriendlyMessage": "Validation failed for 0 object(s) and 1 field(s)",
  },
  "message": "Multiple validation errors occurred while creating field",
  "name": "GraphQLError",
}
`;
